--- a/packages/repo-organization/src/assets/css/Fix.Element-UI.scss
+++ b/packages/repo-organization/src/assets/css/Fix.Element-UI.scss
@@ -55,6 +55,19 @@ $--form-width-default: 195px;
   }
 }
 
+/* Element - RangeEditor
+ -------------------------- */
+.el-range-editor.el-input__inner {
+  &:not(.element-ui-default) {
+    padding: 2px 10px;
+
+    &.el-range-editor--mini .el-range__icon {
+      position: relative;
+      top: 1px;
+    }
+  }
+}
+
 /* Element - Table
  -------------------------- */
 .el-table {
@@ -106,42 +119,5 @@ $--form-width-default: 195px;
     &.el-tabs--top .el-tabs__item.is-top:nth-child(2) {
       padding: 0 20px;
     }
-  }
-}
-
-/** Element - Message-Box 
- -------------------------- */
-.el-message-box {
-  &:not(.element-ui-default) {
-    &.el-message-box-text {
-      width: auto;
-      padding: 24px 32px;
-
-      .el-message-box__container {
-        margin: 12px 0 32px 0;
-      }
-
-      .el-button {
-        min-width: 120px;
-      }
-
-      .el-message-box__btns button:nth-child(2) {
-        margin-left: 32px;
-      }
-    }
-    &.el-message-box-no-header {
-      .el-message-box__header {
-        display: none;
-      }
-    }
-  }
-}
-
-/** Element - Notification
- -------------------------- */
-.el-notification {
-  &:not(.element-ui-default) {
-    min-width: 330px;
-    width: auto;
   }
 }
