1.【ID1001215】 当初诊诊断信息不存在，需要屏蔽复诊信息模块 2.vant版本更新后修改确认按钮主题色

--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -3,3 +3,9 @@
   border-top: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
 }
+.van-picker__confirm {
+  color: $primary;
+}
+.van-dialog__confirm {
+  color: $primary;
+}
