--- a/packages/repo-patient/src/assets/css/index.scss
+++ b/packages/repo-patient/src/assets/css/index.scss
@@ -11,7 +11,7 @@
 @import './common.scss';
 
 //vant-style
-@import './vant-style.css';
+@import './vant-style.scss';
 
 //样式补充
 @import './replenish.css';
