1. vant版本更新之后样式调整; 2.订单列表订单金额字段调整； 3.医生主页暂无号源提示；

--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -3,9 +3,14 @@
   border-top: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
 }
-.van-picker__confirm {
+.van-picker__confirm,
+.van-picker__confirm:active {
   color: $primary;
 }
-.van-dialog__confirm {
+.van-dialog__confirm,
+.van-dialog__confirm:active {
   color: $primary;
+}
+.van-tag--plain::before {
+  border: none;
 }
