--- a/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
+++ b/packages/repo-operation/src/assets/css/Fix.Element-UI.scss
@@ -90,6 +90,10 @@ $--form-width-default: 195px;
       padding: 16px 0;
     }
 
+    .cell {
+      padding: 0 12px;
+    }
+
     .el-button--mini,
     .el-button--mini.is-round {
       font-size: 14px;
