--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -122,7 +122,7 @@
   padding: 0;
   background-color: #f7f7f7;
   background-size: cover;
-  background-image: url('../../assets/images/icons/item-icon-none.jpg');
+  background-image: url('../../assets/images/icons/ic_none_drug.png');
 }
 .imgs-item .item-icon img {
   width: 100%;
