--- a/packages/repo-operation/src/assets/css/Fix.UI.scss
+++ b/packages/repo-operation/src/assets/css/Fix.UI.scss
@@ -36,3 +36,8 @@
     }
   }
 }
+
+.el-form:not(.element-ui-default).el-form--inline > .el-form-item {
+  margin-right: 56px;
+  margin-bottom: 20px;
+}
