--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -25,3 +25,31 @@
   width: 100%;
   height: 100%;
 }
+
+//van-field  标红 放在label后面
+.van-cell.require .van-cell__title > span::after {
+  content: '*';
+  width: 0.13333rem;
+  color: #f00;
+  font-size: 0.37333rem;
+  margin-left: 0.08rem;
+}
+
+.van-cell::after {
+  border-bottom-color: $-color--line;
+  left: 0;
+  right: 0;
+  transform: none;
+}
+
+//.van-button--large   large width: 100%; magin:0 16px;
+.van-button--large.full {
+  width: calc(100% - 32px);
+  margin: 0 16px;
+}
+//修改光标颜色
+textarea,
+input {
+  color: #000; // 其实改color的时候，文字颜色和光标颜色都变了
+  caret-color: $primary; //只改光标颜色
+}
