--- a/packages/repo-doctor/src/assets/css/global.css
+++ b/packages/repo-doctor/src/assets/css/global.css
@@ -15,10 +15,8 @@ html {
 
 body {
   margin: 0;
-  font-family: PingFangSC-Regular, Chinese Quote, -apple-system,
-    BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei,
-    Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji,
-    Segoe UI Emoji, Segoe UI Symbol;
+  font-family: PingFangSC-Regular, Chinese Quote, -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue,
+    Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
   font-size: 14px;
   font-weight: 400;
   font-variant: tabular-nums;
@@ -44,7 +42,7 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #f2f2f2;
-  margin: 20px 0;
+  margin: 0 0 24px 0;
   padding: 0;
 }
 
@@ -57,38 +55,6 @@ hr {
 }
 .el-icon-female {
   color: #f56c6c;
-}
-
-#nprogress .bar {
-  /* background: #ff0000; */
-  position: fixed;
-  z-index: 2031;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-}
-
-#nprogress .spinner {
-  z-index: 2031;
-}
-
-#nprogress .spinner-icon {
-  position: fixed;
-  z-index: 2031;
-  top: 50%;
-  right: 50%;
-
-  width: 24px;
-  height: 24px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border: solid 4px transparent;
-  border-top-color: #5daf34;
-  border-left-color: #f56c6c;
-  border-radius: 50%;
-  -webkit-animation: nprogress-spinner 400ms linear infinite;
-  animation: nprogress-spinner 400ms linear infinite;
 }
 
 ::-webkit-scrollbar {
