--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -26,13 +26,33 @@
   height: 100%;
 }
 
-//van-field  标红 放在label后面
-.van-cell.require .van-cell__title > span::after {
+//van-field  标红 放在label后面  .is__require 必填项标红  .is__error错误信息展示
+.van-cell.is__require .van-cell__title > span::after {
   content: '*';
   width: 0.13333rem;
-  color: #f00;
+  color: #ff3a30;
   font-size: 0.37333rem;
   margin-left: 0.08rem;
+}
+
+//
+.van-cell.is__error {
+  padding-bottom: 2px;
+}
+.van-cell.is__error::after {
+  border-bottom: 1px solid #ff3a30;
+}
+.van-cell {
+  padding: 12px 16px;
+}
+.van-field__error-message {
+  text-align: right;
+  height: 16px;
+  font-size: 12px;
+  font-family: PingFangSC-Regular, PingFang SC;
+  font-weight: 400;
+  color: #ff3a30;
+  line-height: 16px;
 }
 
 .van-cell::after {
