--- a/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
@@ -41,7 +41,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #00c6ae;
+            background: #3099a6;
             color: #fff;
             font-size: 15px;
           }
@@ -71,7 +71,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #00c6ae;
+            background: #3099a6;
             color: #fff;
             font-size: 15px;
           }
@@ -248,7 +248,7 @@
       align-items: center;
       justify-content: center;
       font-size: 13px;
-      color: #00c6ae;
+      color: #3099a6;
       background: rgba(235, 251, 249, 1);
       border-radius: 17px;
       border: 1px solid rgba(0, 198, 174, 1);
