1, Fixed ZHYY-1652 2, Change Style 3, Upgrade dependencies

--- a/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
@@ -53,7 +53,7 @@
 
         .message-body {
           color: rgba(255, 255, 255, 1);
-          background: rgba(0, 198, 174, 1);
+          background: var(--q-color-primary);
         }
 
         .message-avatar {
