style:优化样式表现

--- a/packages/repo-doctor/src/assets/css/global.css
+++ b/packages/repo-doctor/src/assets/css/global.css
@@ -7,6 +7,18 @@ hr {
   padding: 0;
 }
 
+h1,
+h2,
+h4,
+h4,
+h5,
+h6,
+p,
+a {
+  margin: 0;
+  padding: 0;
+}
+
 .el-loading-mask.is-fullscreen {
   cursor: wait;
 }
