--- a/packages/repo-patient/src/assets/css/normalize.css
+++ b/packages/repo-patient/src/assets/css/normalize.css
@@ -236,6 +236,7 @@ template {
 */
 input,
 textarea {
-  -webkit-appearance: none;
-  appearance: none;
+  outline: none;
+  -webkit-appearance: none; /*去除系统默认的样式*/
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* 点击高亮的颜色*/
 }
