--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -25,7 +25,19 @@
   width: 100%;
   height: 100%;
 }
-
+//van-field
+.van-cell,
+.van-field {
+  color: #333;
+}
+.van-field__label,
+.van-field__control {
+  color: #333;
+}
+.van-field__control::placeholder {
+  color: #333;
+  opacity: 0.4;
+}
 //van-field  标红 放在label后面  .is__require 必填项标红  .is__error错误信息展示
 .van-cell.is__require .van-cell__title > span::after {
   content: '*';
@@ -33,6 +45,8 @@
   color: #ff3a30;
   font-size: 0.37333rem;
   margin-left: 0.08rem;
+  vertical-align: middle;
+  display: inline-block;
 }
 
 //
@@ -82,4 +96,9 @@ input {
 //input  搜索icon
 .van-icon.van-icon-search {
   color: #c7c7c7;
+}
+
+//van-button 文字垂直居中
+.van-button__content {
+  line-height: normal;
 }
