--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -31,7 +31,7 @@
 
 .card .card-name {
   font-size: 17px;
-  font-weight: 600;
+  font-weight: bold;
   line-height: 2;
   overflow: hidden;
   white-space: nowrap;
