--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -18,6 +18,7 @@
   background: $primary;
 }
 //vant image 默认加载失败图片不展示
+.van-icon-photo::before,
 .van-icon-photo-fail::before {
   content: '';
 }
@@ -101,4 +102,8 @@ input {
 //van-button 文字垂直居中
 .van-button__content {
   line-height: normal;
+}
+//蒙层fixed 层级默认666
+.van-overlay {
+  z-index: 666;
 }
