feat:服务包管理
https://jira.yyjzt.com/browse/ZHYY-2063
https://jira.yyjzt.com/browse/ZHYY-2064
https://jira.yyjzt.com/browse/ZHYY-2067
https://jira.yyjzt.com/browse/ZHYY-2069
https://jira.yyjzt.com/browse/ZHYY-2071

--- a/packages/repo-doctor/src/assets/css/global.scss
+++ b/packages/repo-doctor/src/assets/css/global.scss
@@ -19,6 +19,21 @@ a {
   padding: 0;
 }
 
+
+.layout-route {
+  padding: 20px;
+
+  .card {
+    background: #fff;
+    padding: 24px 32px;
+
+    &.card-search {
+      padding: 24px 32px 4px 32px;
+    }
+  }
+}
+
+
 .el-loading-mask.is-fullscreen {
   cursor: wait;
 }
