--- a/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
+++ b/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
@@ -12,7 +12,7 @@
     }
     .message {
       font-size: 14px;
-      margin: 0 0 10px 0;
+      margin: 0 0 16px 0;
 
       &.in {
         text-align: left;
@@ -25,6 +25,9 @@
         .message-avatar {
           margin: 0 10px 0 0;
           align-self: flex-start;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           img {
             width: 40px;
             height: 40px;
@@ -55,6 +58,9 @@
         .message-avatar {
           margin: 0 0 0 10px;
           align-self: flex-start;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           img {
             width: 40px;
             height: 40px;
@@ -77,9 +83,11 @@
       &.system {
         font-size: 12px;
         text-align: center;
-        margin: 10px auto;
+        // margin: 8px auto;
 
         .message-body {
+          margin: 0;
+          padding: 0;
           color: rgba(155, 155, 155, 1);
           background: rgba(242, 242, 242, 1);
         }
@@ -87,14 +95,15 @@
 
       &.time {
         text-align: center;
-        margin: 0;
+        // margin: 0;
 
         .message-body {
           margin: 0;
+          padding: 0;
           font-size: 12px;
           color: rgba(155, 155, 155, 1);
           background: transparent;
-
+          line-height: 1;
           * {
             font-size: 12px;
           }
@@ -105,7 +114,7 @@
         white-space: pre-wrap;
         word-wrap: break-word;
         display: inline-block;
-        padding: 10px;
+        padding: 8px;
         border-radius: 6px;
         // max-width: 73%;
         max-width: 100%;
