--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -15,7 +15,17 @@
   border: none;
 }
 .van-sidebar-item--select::before {
-  background: $primary;
+  background: transparent;
+  display: block;
+  width: 0;
+  height: 0;
+  left: 12px;
+  border-width: 4px;
+  border-style: solid;
+  border-color: transparent transparent transparent $primary;
+}
+.van-tree-select__nav-item {
+  padding: 16px 28px;
 }
 //vant image 默认加载失败图片不展示
 .van-icon-photo::before,
