--- a/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
+++ b/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
@@ -9,6 +9,7 @@
     flex: 1;
     .body-size {
       font-size: 16px;
+      font-family: -apple-system, sans-serif;
     }
     .message {
       font-size: 14px;
@@ -16,6 +17,21 @@
 
       &.in {
         text-align: left;
+
+        .triangle {
+          position: relative;
+          &::before {
+            position: absolute;
+            content: '';
+            top: 10px;
+            left: -6px;
+            width: 0;
+            height: 0;
+            border-top: 8px solid transparent;
+            border-bottom: 8px solid transparent;
+            border-right: 8px solid #fff;
+          }
+        }
 
         .message-body {
           color: rgba(51, 51, 51, 1);
@@ -50,9 +66,24 @@
       &.out {
         /*text-align: right;*/
 
+        .triangle {
+          position: relative;
+          &::before {
+            position: absolute;
+            content: '';
+            top: 10px;
+            right: -6px;
+            width: 0;
+            height: 0;
+            border-top: 8px solid transparent;
+            border-bottom: 8px solid transparent;
+            border-left: 8px solid $primary;
+          }
+        }
+
         .message-body {
-          color: rgba(255, 255, 255, 1);
-          background: rgba(0, 198, 174, 1);
+          color: #fff;
+          background: $primary;
         }
 
         .message-avatar {
