--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -155,6 +155,7 @@
   display: block;
   position: relative;
 }
+
 .none-page .icon.t10 {
   margin-top: 10%;
 }
@@ -179,7 +180,7 @@
   font-size: 15px;
   color: #999;
   text-align: center;
-  margin: 10px;
+  margin-top: 10px;
 }
 /************none-page-end**************/
 
