--- a/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
+++ b/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
@@ -3,13 +3,19 @@
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
+  word-break: break-all;
   .item {
     overflow: auto;
     padding: 5px 16px;
     flex: 1;
     .body-size {
       font-size: 16px;
-      font-family: -apple-system, sans-serif;
+    }
+    .text-vc {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: normal;
     }
     .message {
       font-size: 14px;
