--- a/packages/repo-patient/src/assets/css/global.css
+++ b/packages/repo-patient/src/assets/css/global.css
@@ -14,8 +14,8 @@ html {
 
 body {
   margin: 0;
-  font-family: PingFangSC-Regular, Chinese Quote, -apple-system, BlinkMacSystemFont, Segoe UI, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue,
-    Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-family: -apple-system, system-ui, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Helvetica Neue', 'PingFang SC',
+    'Hiragino Sans GB', 'Microsoft YaHei', Arial;
   font-weight: 400;
   font-variant: tabular-nums;
   font-size: 13px;
