--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -121,18 +121,30 @@
 }
 
 //.van-dialog
+.van-dialog {
+  border-radius: 8px;
+}
 .van-dialog__header {
   font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+  padding-top: 20px;
+}
+.van-dialog__message {
+  padding: 16px;
 }
 .van-dialog__message.van-dialog__message--has-title {
   color: #333;
   font-size: 16px;
+  line-height: 24px;
 }
 .van-dialog__footer .van-dialog__cancel {
   color: rgba(51, 51, 51, 0.4);
   font-size: 16px;
 }
-
+.van-hairline--top::after {
+  border-color: #f5f5f5;
+}
 /** 
 *css去除ios中input和textarea的阴影
 */
