feat:修改复诊记录质疑

--- a/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
@@ -79,12 +79,13 @@
       }
 
       &.system {
-        font-size: 12px;
+        font-size: 14px;
         text-align: center;
         margin: 10px auto;
 
         .message-body {
           color: rgba(155, 155, 155, 1);
+          padding: 3px 20px;
           background: rgba(242, 242, 242, 1);
         }
       }
