--- a/packages/repo-patient/src/views/style/modules.css
+++ b/packages/repo-patient/src/views/style/modules.css
@@ -146,7 +146,14 @@
   align-items: center;
   flex-direction: column;
 }
-
+.none-page.blank {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 .none-page .icon {
   margin: 0 auto;
   margin-top: 0;
