--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -40,6 +40,8 @@
 .van-cell,
 .van-field {
   color: #333;
+  font-size: 16px;
+  line-height: 24px;
 }
 .van-field__label,
 .van-field__control {
@@ -159,4 +161,32 @@ textarea,
 input {
   color: #000; /*其实改color的时候，文字颜色和光标颜色都变了*/
   caret-color: $primary; /*只改光标颜色*/
+}
+
+//ui  ---  van-button  弹框按钮  .is__dialog  .van-button--primary(确定)
+.van-button {
+  &.is__dialog {
+    flex: 1;
+    border: none;
+    background: rgba(51, 51, 51, 0.05);
+    font-size: 16px;
+    &.van-button--primary {
+      color: $primary;
+      font-size: 18px;
+    }
+
+    & + .van-button {
+      margin-left: 8.53%;
+    }
+  }
+}
+
+.van-overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.van-popup--bottom {
+  box-shadow: 0px 0px 8px 0px rgba(51, 51, 51, 0.16);
+}
+.van-popup--bottom.van-popup--round {
+  border-radius: 16px 16px 0 0;
 }
