--- a/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
+++ b/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
@@ -21,6 +21,19 @@
       font-size: 14px;
       margin: 0 0 16px 0;
 
+      .message-body-wrap {
+        width: 73%;
+      }
+
+      .message-remind-text {
+        box-sizing: border-box;
+        max-width: 100%;
+        padding: 10px 8px;
+        background: rgba(51, 51, 51, 0.05);
+        border-radius: 8px;
+        color: #858585;
+      }
+
       &.in {
         text-align: left;
 
@@ -130,7 +143,7 @@
           margin: 0;
           padding: 0;
           color: rgba(155, 155, 155, 1);
-          background: rgba(242, 242, 242, 1);
+          // background: rgba(242, 242, 242, 1);
         }
       }
 
