--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -170,6 +170,7 @@ input {
     border: none;
     background: rgba(51, 51, 51, 0.05);
     font-size: 16px;
+    height: 48px;
     &.van-button--primary {
       color: $primary;
       font-size: 18px;
