chore: 使用 dart-sass 替换 node-sass

--- a/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
+++ b/packages/repo-doctor/src/views/components/inquiry/messageList/src/assets/style.scss
@@ -159,7 +159,7 @@
       background-color: #f7f7f7;
       padding: 16px;
     }
-    /deep/.van-field__button {
+    ::v-deep.van-field__button {
       padding-left: 10px;
       .van-button {
         height: 38px;
@@ -167,12 +167,12 @@
         font-size: 16px;
       }
     }
-    /deep/.van-field__left-icon {
+    ::v-deep.van-field__left-icon {
       display: flex;
       justify-content: center;
       margin-right: 10px;
     }
-    /deep/.van-field__control {
+    ::v-deep.van-field__control {
       line-height: 20px;
       padding: 7px 8px;
       border-radius: 3px;
@@ -198,11 +198,11 @@
     }
   }
 
-  /deep/ .van-image-preview__index {
+  ::v-deep .van-image-preview__index {
     top: 24px;
   }
 
-  /deep/ .van-image-preview__cover {
+  ::v-deep .van-image-preview__cover {
     position: absolute;
     top: 24px;
     left: 24px;
