--- a/packages/repo-patient/src/assets/css/vant-style.scss
+++ b/packages/repo-patient/src/assets/css/vant-style.scss
@@ -43,6 +43,12 @@
   font-size: 16px;
   line-height: 16px;
 }
+.van-cell__left-icon,
+.van-cell__right-icon {
+  font-size: 16px;
+  line-height: 16px;
+  height: 16px;
+}
 .van-field__label,
 .van-field__control {
   color: #333;
