--- a/packages/peace-ui/assets/css/el-table.scss
+++ b/packages/peace-ui/assets/css/el-table.scss
@@ -14,22 +14,18 @@
     }
 
     th {
-      font-weight: bold;
-      background: #f5f5f5;
-
       > .cell {
-        font-weight: 500;
+        font-weight: 700;
         color: #333333;
         padding: 8px 16px;
       }
     }
 
-    tr {
-      .cell {
+    td {
+      > .cell {
         font-weight: 400;
         color: #333333;
-        padding-left: 16px;
-        padding-right: 16px;
+        padding: 0 16px;
       }
     }
 
