--- a/packages/peace-ui/assets/css/el-input.scss
+++ b/packages/peace-ui/assets/css/el-input.scss
@@ -51,6 +51,10 @@
 
 .el-input-number {
   &:not(.element-ui-default) {
+    ::placeholder {
+      color: rgba(51, 51, 51, 0.4);
+    }
+
     &.is-controls-right {
       .el-input__inner {
         text-align: left;
@@ -65,6 +69,10 @@
 
 .el-textarea {
   &:not(.element-ui-default) {
+    ::placeholder {
+      color: rgba(51, 51, 51, 0.4);
+    }
+
     &.el-input--mini {
       .el-textarea__inner {
         padding: 4px 12px;
