fix(ui): 优化 input-number 样式表现

--- a/packages/peace-ui/assets/css/el-input.scss
+++ b/packages/peace-ui/assets/css/el-input.scss
@@ -55,6 +55,7 @@
       color: rgba(51, 51, 51, 0.4);
     }
 
+    &.is-without-controls,
     &.is-controls-right {
       .el-input__inner {
         text-align: left;
