--- a/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
+++ b/packages/repo-patient/src/views/message/messageList/src/assets/style.scss
@@ -16,6 +16,7 @@
       align-items: center;
       justify-content: center;
       line-height: normal;
+      text-align: left;
     }
     .message {
       font-size: 14px;
