feat(权限系统): 权限控制、移除登录超时
fix(权限系统): 菜单管理默认选择一项加载数据

--- a/packages/peace-ui/assets/css/el-tree.scss
+++ b/packages/peace-ui/assets/css/el-tree.scss
@@ -14,7 +14,8 @@
       border-bottom: 1px solid #eeeeee;
     }
 
-    > .el-tree-node > .el-tree-node__content {
+    > .el-tree-node > .el-tree-node__content,
+    > .el-tree-node > .el-tree-node__children {
       background-color: #fafafa;
       font-weight: 500;
       color: #333333;
