feat(机构端&运营端): 显示本位码 & 支持错误类型查询

--- a/packages/peace-ui/assets/css/el-checkbox.scss
+++ b/packages/peace-ui/assets/css/el-checkbox.scss
@@ -3,3 +3,11 @@
     margin-right: 24px;
   }
 }
+
+.el-cascader-panel {
+  &:not(.element-ui-default) {
+    .el-checkbox {
+      margin-right: 0;
+    }
+  }
+}
