fix(样式): 优化 element-ui tag 样式表现

--- a/packages/peace-ui/assets/css/el-tag.scss
+++ b/packages/peace-ui/assets/css/el-tag.scss
@@ -2,6 +2,11 @@
   &:not(.element-ui-default) {
     &.el-tag--mini {
       padding: 0 8px;
+      line-height: 20px;
+    }
+
+    .el-icon-close {
+      top: 0px;
     }
   }
 }
