--- a/packages/repo-operation/src/assets/font/iconfont.css
+++ b/packages/repo-operation/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "zyy-icon"; /* Project id 1924446 */
-  src: url('iconfont.woff2?t=1631179749121') format('woff2'),
-       url('iconfont.woff?t=1631179749121') format('woff'),
-       url('iconfont.ttf?t=1631179749121') format('truetype');
+  src: url('iconfont.woff2?t=1639982803679') format('woff2'),
+       url('iconfont.woff?t=1639982803679') format('woff'),
+       url('iconfont.ttf?t=1639982803679') format('truetype');
 }
 
 .zyy-icon {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.zyy-yaoshishenhe:before {
+  content: "\e6aa";
 }
 
 .zyy-chengfenguize2:before {
